--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,46 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      - NEO4J_dbms_memory_heap_initial__size=512m
-      - NEO4J_dbms_memory_heap_max__size=2G
+      - NEO4J_dbms_connector_bolt_listen__address=:7687
+      - NEO4J_dbms_connector_bolt_advertised__address=:7687
+      - NEO4J_dbms_memory_heap_initial__size=1G
+      - NEO4J_dbms_memory_heap_max__size=1G
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_apoc_import_file_enabled=true
+      - NEO4J_dbms_security_allow__csv__import__from__file__urls=true
       - NEO4J_dbms_default__listen__address=0.0.0.0
       - NEO4J_dbms_allow__upgrade=true
       - NEO4J_dbms_default__database=neo4j
+      - NEO4J_dbms_memory_pagecache_size=1G
+      - NEO4J_dbms_memory_pagecache_warmup_preload=true
       - NEO4J_AUTH=neo4j/test
     restart: unless-stopped
-
+  test_neo4j:
+    container_name: test_db_skill_graph
+    image: neo4j:latest
+    networks: ["neo4j_skill_graph"]
+    volumes:
+      - ./test_db/data:/data
+      - ./test_db/plugins:/plugins
+      - ./test_db/import:/import
+    ports:
+      - "8484:7474"
+      - "8687:8687"
+    environment:
+      - NEO4J_dbms_connector_bolt_enabled=true
+      - NEO4J_dbms.connector_http_enabled=true
+      - NEO4J_dbms.connector_http_listen_address=:8484
+      - NEO4J_dbms_connector_http_advertised__address=:8484
+      - NEO4J_dbms_connector_bolt_listen__address=:8687
+      - NEO4J_dbms_connector_bolt_advertised__address=:8687
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4JLABS_PLUGINS=["apoc"]
+      - NEO4J_dbms_default__listen__address=0.0.0.0
+      - NEO4J_dbms_allow__upgrade=true
+      - NEO4J_dbms_default__database=neo4j
+      - NEO4J_AUTH=neo4j/test_db
+    restart: unless-stopped
   api:
     container_name: api_skill_graph
     build: ./api
@@ -36,5 +68,6 @@ services:
       - neo4j:neo4j
     depends_on:
       - neo4j
+      - test_neo4j
 
 networks: { neo4j_skill_graph: {} }
